# LieIPM

./: .gitignore  README.md
LieIPM-cpp/: CMakeLists.txt
LieIPM-cpp/include/: CasadiFunctionWrapper.h  LieIPM.h  LieIPMCasadiUtils.h  LieIPMUtils.h  LinearSolverWrapper.h  MPCRunner.h
matlab/casadi-utils/: gen_SE3_EqualityConstraints.m  gen_SO3xR3_EqualityConstraints.m  gen_SO3xR3_Variables.m
matlab/example/SE3_vs_SO3/: StaticInit.m  gen_init_so3se3_cmpr.m  load_config.m  main.m  test_main.m
matlab/example/SE3_vs_SO3/SE3/: gen_SE3_lib.m  gen_init_omega.m
matlab/example/SE3_vs_SO3/SE3/gen_casadi/: A_kkt_mex.mexw64  Asym_kkt_mex.c  Asym_kkt_mex.mexw64  Retraction_xyz_mex.c  Retraction_xyz_mex.mexw64  b_kkt_mex.c  b_kkt_mex.mexw64  df_mex.c  df_mex.mexw64  f_mex.c  f_mex.mexw64  hg_mex.c  hg_mex.mexw64
matlab/example/SE3_vs_SO3/SE3/gen_casadi_cpp/: Asym_kkt.cpp  Retraction_xyz.cpp  b_kkt.cpp  df.cpp  f.cpp  f.h  hg.cpp  hg.h
matlab/example/SE3_vs_SO3/SE3/utils/: StraightLineInitDrone.m  StraightLineInitDrone_SE3.m  StraintLineInterp_Keypoints.m  fiber_bundle_cost.m  fun_J2Jd.m  gen_SE3_trace_cost.m  gen_SE3_trace_cost_naive.m  gen_SO3xR3_flat_cost.m  gen_SO3xR3_log_loss.m  plotInterpTrajWithTriads.m  test_yaw_cost.m
matlab/example/SE3_vs_SO3/SO3/: gen_SO3xR3_lib.m  load_init_state.m
matlab/example/SE3_vs_SO3/SO3/gen_casadi/: A_kkt_mex.c  A_kkt_mex.mexw64  Asym_kkt_mex.c  Asym_kkt_mex.mexw64  Retraction_xyz_mex.c  Retraction_xyz_mex.mexw64  b_kkt_mex.c  b_kkt_mex.mexw64  df_mex.c  df_mex.mexw64  f_mex.c  (+3 more)
matlab/example/SE3_vs_SO3/plot/: SE3_180.mat  SE3_many.mat  SO3_180.mat  SO3_many.mat  plot_SE3_SO3_cmpr.m  plot_kkt.m  plot_kkt_simple.m
matlab/example/config/: load_system_constant_122_new.m  load_system_constant_hiperlab.m
matlab/example/drone/: gen_dynamics_casadi_batch_hiperlab.m  gen_init_guess_hiper.m  main.m  test_main_hiperlab.m
matlab/example/drone/gen_casadi/: A_kkt_mex.c  A_kkt_mex.mexw64  Asym_kkt_mex.c  Asym_kkt_mex.mexw64  Retraction_xyz_mex.c  Retraction_xyz_mex.mexw64  b_kkt_mex.c  b_kkt_mex.mexw64  df_mex.c  df_mex.mexw64  f_mex.c  f_mex.mexw64  hg_mex.c  hg_mex.mexw64
matlab/example/drone/gen_casadi_cpp/: A_kkt.cpp  b_kkt.cpp  df.h  f.cpp  hg.cpp
matlab/example/drone/utils/: gen_SO3xR3_trace_cost.m
matlab/utils/: genJ2Jd.m
matlab/utils/Dynamics/: MultiRigidBody3D.m  RigidBody3D.m
matlab/utils/Lie/: Adj_SE3.m  Exp_SO3_sym.m  Log_SO3.m  Rodrigues.m  adjoint_se3.m  skew_SE3.m  vee_SE3.m  vee_SE3_vec.m  vee_SO3.m
matlab/utils/autodiff/: Exp_SO3.m  gen_SO3xR3_EqualityConstraints.m  gen_SO3xR3_Jacobians.m  gen_SO3xR3_Variables.m
matlab/utils/optimization/: LieIPM_casadi_inertia.m
test/: CMakeLists.txt  run_all
test-cpp/: run_all
test-cpp/config/: config.yaml  config_noise_1.yaml  config_noise_2.yaml  config_noise_3.yaml
test-cpp/src/: exp_traj.cpp
(+33 files in other folders)
